# clipdemo

./: .gitignore  app.py  config.py  docker-compose.yaml  poll_jobs.py  pyproject.toml
processor/: clip_embedding.py  vectorizer.py  video_processing.py  weaviate.py
task/: tasks.py  test_tasks.py
